feat: configuraciones iniciales para sitio multi-idioma

--- a/views/share/navbar.hbs
+++ b/views/share/navbar.hbs
@@ -13,9 +13,9 @@
           <a class="nav-link" href="{{ idiomUrl }}/about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link d-inline" href="/es">Es</a> 
+          <span class="nav-link d-inline cursorEventIdom" onclick="changeIdomPage('es')">Es</span> 
           <span class="text-white-50">/</span> 
-          <a class="nav-link d-inline" href="/en">En</a>
+          <span class="nav-link d-inline cursorEventIdom" onclick="changeIdomPage('en')">En</span>
         </li>
       </ul>
       <span class="navbar-text">
