fix: duplicate link

--- a/views/share/navbar.hbs
+++ b/views/share/navbar.hbs
@@ -10,7 +10,7 @@
           <a class="nav-link active" aria-current="page" href="/{{ idiomUrl }}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="{{ idiomUrl }}/about">About</a>
+          <a class="nav-link" href="/{{ idiomUrl }}/about">About</a>
         </li>
         <li class="nav-item">
           <span class="nav-link d-inline cursorEventIdom" onclick="changeIdomPage('es')">Es</span> 
