progress: header and nav

--- a/public/assets/scss/header.scss
+++ b/public/assets/scss/header.scss
@@ -2,5 +2,167 @@
 #{$desktop},
 #{$tablet},
 #{$phone} {
-	body > header {}
+	
+	#hero{
+		background-image: url('../img/hero.jpg');
+		background-size: cover;
+		background-position: top center;
+		position: relative;
+		z-index: 1;
+
+		#temporal-background{
+			background-color: black;
+			padding: 30px;
+		}
+
+		h1{
+			display: block;
+			width: fit-content;
+			font-size: 4rem;
+			position: relative;
+			color: transparent;
+			animation: text_reveal .7s ease forwards;
+			animation-delay: 1s ;
+
+			&:nth-child(1){
+				animation-delay: 1s;
+			}
+
+			&:nth-child(2){
+				animation-delay: 2s;
+			}
+
+			&:nth-child(3){
+				animation: text_reveal_name .5s ease forwards;
+				animation-delay: 3s;
+			}
+
+			span{
+				position: absolute;
+				top: 0;
+				left: 0;
+				height: 100%;
+				width: 0;
+				background-color: crimson;
+				animation: text_reveal_box 1s ease;
+				animation-delay: .3s;
+			}
+
+			&:nth-child(1) span {
+				animation-delay: .5s;
+			}
+
+			&:nth-child(2) span {
+				animation-delay: 1.5s;
+			}
+
+			&:nth-child(3) span {
+				animation-delay: 2.5s;
+			}
+		}
+
+		.cta{
+			display: inline-block;
+			padding: 10px 30px;
+			color:white;
+			background-color:transparent;
+			border: 2px solid crimson;
+			font-size: 2rem;
+			text-transform: uppercase;
+			letter-spacing: .1rem;
+			margin-top: 30px;
+			transition: .3s ease;
+			transition-property:  background-color, color;
+
+			&:hover{
+				color: white;
+				background-color: crimson;
+			}
+		}
+
+		.hero{
+			max-width: 1200px;
+			margin: 0 auto;
+			padding: 0 50px;
+			justify-content: flex-start;
+		}
+	}
+
+	#hero::after{
+		content: '';
+		position: absolute;
+		left: 0;
+		top: 0;
+		height: 100%;
+		width: 100%;
+		background-color: #112f35;
+		opacity: .7;
+		z-index: -1;
+	}
+
+	// Key frames
+		@keyframes text_reveal_box{
+			50%{
+				width: 100%;
+				left: 0;
+			}
+			100%{
+				width: 0;
+				left: 100%;
+			}
+		}
+
+		@keyframes text_reveal{
+			100%{
+				color:white;
+			}
+		}
+
+		@keyframes text_reveal_name{
+			100%{
+				color:crimson;
+				// font-weight: 400;
+			}
+		}
+	// Key frames
+
+	body > header {
+
+		padding: 0;
+		margin: 0;
+		box-sizing: border-box;
+		font-size: 10px;
+		font-family: 'Montserrat', sans-serif;
+
+		a {
+			text-decoration: none;
+		}
+
+		.contain {
+			min-height: 100vh;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+	}
+}
+
+@media #{$phone} {
+
+	#hero{
+		.hero {
+			justify-content: center;
+		}
+	}
+}
+
+@media ( max-width: 320px ) {
+
+	#hero{
+		#temporal-background{
+			background-color: black;
+			padding: 20px;
+		}
+	}
 }
