--- a/views/page.hbs
+++ b/views/page.hbs
@@ -2,15 +2,16 @@
 <html lang="es-MX">
 	{{> head }}
 	<body class="animate__animated animate__fadeIn animate__slower">
-		<!-- Header -->
-			{{> header }}
-
 		<!-- Nav -->
 			{{> navbar }}
+
+		<!-- Header -->
+			{{> header }}
 			
 		<!-- Content -->
 			{{> (whichPartial) }}
 
+		<!-- Formulario -->
 		<div id="root"></div>
 		
 		<!-- Footer -->
