--- a/views/share/navbar.hbs
+++ b/views/share/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-dark bg-primary">
+{{!-- <nav class="navbar navbar-dark bg-primary">
   <div class="container-fluid">
     <a class="navbar-brand" href="/{{ idiomUrl }}">Template by {{ template }}</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,8 +19,29 @@
         </li>
       </ul>
       <span class="navbar-text">
-        ;)
+        ;)  
       </span>
     </div>
   </div>
+</nav> --}}
+<nav id="nav-hero">
+  <section class="nav-hero contain">
+    <div class="nav-bar">
+      <div class="brand">
+        <a href="#">
+          <h1><span>E</span>rick <span>A</span>lva</h1>
+        </a>
+      </div>
+      <div class="nav-list">
+        <div class="hamburguer"><div class="bar"></div></div>
+        <ul>
+          <li><a href="#" data-after="Home">Home</a></li>
+          <li><a href="#" data-after="Services">Services</a></li>
+          <li><a href="#" data-after="Projects">Projects</a></li>
+          <li><a href="#" data-after="About">About</a></li>
+          <li><a href="#" data-after="Contact">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </section>
 </nav>
