--- a/public/assets/scss/fonts.scss
+++ b/public/assets/scss/fonts.scss
@@ -1,2 +1,3 @@
 @import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,700' );
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
