--- a/public/assets/scss/navigation.scss
+++ b/public/assets/scss/navigation.scss
@@ -2,11 +2,194 @@
 #{$desktop},
 #{$tablet},
 #{$phone} {
+
+	#nav-hero {
+		position: fixed;
+		z-index: 10000;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height:auto;
+
+		.nav-hero {
+			min-height: 8vh;
+			background-color: rgba( 31, 30, 30, 0.24 );
+
+			.nav-bar {
+				display: flex;
+				align-items: center;
+				justify-content: space-between;
+				width: 100%;
+				height: 100%;
+				max-width: 1300px;
+				padding: 0 20px;
+			}
+
+			.nav-list {
+				ul {
+					list-style: none;
+					position: absolute;
+					background-color: rgba( 31, 30, 30 );
+					width: 100vw;
+					height: 100vh;
+					left: 100%;
+					top: 0;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+					align-items: center;
+					z-index: 1;
+					overflow-x: hidden;
+					transition: .5s ease left;
+
+					&.active{
+						left: 10%;
+					}
+
+					a {
+						font-size: 2.5rem;
+						font-weight: 700;
+						letter-spacing: .2rem;
+						text-decoration: none;
+						color: white;
+						text-transform: uppercase;
+						padding: 20px;
+						display: block;
+
+						&::after {
+							content: attr(data-after);
+							position: absolute;
+							top: 50%;
+							left: 50%;
+							transform: translate( -50%, -50% ) scale(0);
+							color: rgba( 240, 248, 255, 0.021 );
+							font-size: 9rem;
+							letter-spacing: 50px;
+							z-index: -1;
+							transition: .3s ease letter-spacing;
+						}
+					}
+
+					li:hover {
+
+						a{
+							color: crimson;
+						}
+
+						a::after {
+							transform: translate( -50%, -50% ) scale(1);
+							letter-spacing: initial;
+						}	
+					} 
+				}
+			}
+		}
+
+		.hamburguer {
+			height: 40px;
+			width: 40px;
+			display: inline-block;
+			border: 3px solid white;
+			border-radius: 50%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			position: relative;
+			z-index: 100;
+			cursor: pointer;
+
+			&::after{
+				content: '';
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				border-radius: 50%;
+				border: 3px solid white;
+				animation: hamburguer_puls 1s ease infinite;
+			}
+
+			.bar {
+				height: 2px;
+				width: 15px;
+				position: relative;
+				background-color: white;
+				z-index: -1;
+			}
+
+			.bar::after,
+			.bar::before {
+				content: '';
+				position: absolute;
+				height: 100%;
+				width: 100%;
+				left: 0;
+				background-color: white;
+				transition: .3s ease;
+				transition-property: top, bottom;
+			}
+
+			.bar::after{
+				top: 8px;
+			}
+
+			.bar::before{
+				bottom: 8px;
+			}
+
+			&.active .bar::after{
+				top:0;
+			}
+
+			&.active .bar::before { 
+				bottom:0;
+			}
+		}
+	}
+
 	nav {
+		padding: 0;
+		margin: 0;
+		box-sizing: border-box;
+		font-size: 10px;
+		font-family: 'Montserrat', sans-serif;
+
+		a {
+			text-decoration: none;
+		}
+
+		.brand h1 {
+			font-size: 3em;
+			text-transform: uppercase;
+			color: white;
+		}
+
+		.brand h1 span {
+			color: crimson;
+		}
+
+		.contain {
+			min-height: 100vh;
+			width: 100%;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
 
 		.cursorEventIdom{
 			cursor: pointer;
 		}
 
+	}
+
+
+	@keyframes hamburguer_puls{
+		0%{
+			opacity: 1;
+			transform: scale(1);
+		}
+		100%{
+			opacity: 0;
+			transform: scale(1.7);
+		}
 	}
 }
