--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -1,4 +1,4 @@
-<section class="container section-first">
+{{!-- <section class="container section-first">
 	<div class="row">
 		<div class="col-12">
 			<h1>{{ namePage }}</h1>
@@ -10,4 +10,117 @@
 		</div>
 	</div>
 	<br />
+</section> --}}
+
+<section id="services" class="section-config">
+	<div class="contain-section">
+		<h2 class="section-heading" data-outline="Services">Services</h2>
+		<div class="all-items">
+			<div class="item">
+				<div class="icon">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+						d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+					</svg>
+				</div>
+				<h3 class="item-heading">Web Design</h3>
+				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
+					saepe est aliquid corporis suscipit accusantium minus.</p>
+			</div>
+			 <div class="item">
+				<div class="icon">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+						d="M19.428 15.428a2 2 0 00-1.022-.547l-2.387-.477a6 6 0 00-3.86.517l-.318.158a6 6 0 01-3.86.517L6.05 15.21a2 2 0 00-1.806.547M8 4h8l-1 1v5.172a2 2 0 00.586 1.414l5 5c1.26 1.26.367 3.414-1.415 3.414H4.828c-1.782 0-2.674-2.154-1.414-3.414l5-5A2 2 0 009 10.172V5L8 4z" />
+					</svg>
+				</div>
+				<h3 class="item-heading">UI/UX</h3>
+				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
+					saepe est aliquid corporis suscipit accusantium minus.</p>
+			</div>
+			<div class="item">
+				<div class="icon">
+					<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+					<path stroke-linecap="round" stroke-linejoin="round" stroke-width="1"
+						d="M10 21h7a2 2 0 002-2V9.414a1 1 0 00-.293-.707l-5.414-5.414A1 1 0 0012.586 3H7a2 2 0 00-2 2v11m0 5l4.879-4.879m0 0a3 3 0 104.243-4.242 3 3 0 00-4.243 4.242z" />
+					</svg>
+				</div>
+				<h3 class="item-heading">SEO</h3>
+				<p class="item-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque voluptas non nisi nihil
+					saepe est aliquid corporis suscipit accusantium minus.</p>
+			</div>
+		</div>
+	</div>
+</section>
+
+<section id="about" class="section-config">
+	<div class="contain-section">
+		<h2 class="section-heading" data-outline="about">About</h2>
+		<div class="wrapper">
+        	<div class="left">
+				<div class="card">
+					<div class="img">
+						<img src="/assets/img/img-2.png" alt="">
+					</div>
+					<p class="card-desc">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione aut consectetur
+					itaque culpa deserunt
+					molestias asperiores a illum accusamus eum.</p>
+					<h3 class="card-name">Shaif Arfan</h3>
+					<p class="card-sub-title">CEO of My Com</p>
+				</div>
+			</div>
+			<div class="right">
+				<p class="subheading">Hi! This is AMY</p>
+				<h2 class="slogan">Freelance Web Designer</h2>
+				<p class="right-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptas laboriosam quos atque
+					nisi dolorem, iure
+					alias. Veritatis dolore laudantium temporibus aperiam? Deleniti fugiat commodi, sapiente placeat similique
+					consequuntur voluptatibus necessitatibus?</p>
+				<div class="buttons">
+					<a href="./resume.txt" class="primary-btn" download="">Download Resume</a>
+					<a href="./contact.html" class="primary-btn outline">Hire Me</a>
+				</div>
+       		</div>
+		</div>
+
+	</div>
+</section>
+
+<section id="projects" class="section-config">
+    <div class="contain-section">
+      	<h2 class="section-heading" data-outline="Projects">Projects</h2>
+	  	<div class="all-items">
+			<div class="item">
+				<div class="left">
+					<div class="img">
+					<img src="/assets/img/project-1.jpg" alt="">
+					</div>
+				</div>
+				<div class="right">
+					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
+					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
+					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
+					quibusdam dolor fuga quis
+					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
+					Architecto, fugit.</p>
+					<div class="buttons">
+					<a href="#" class="primary-btn">Know More</a>
+					<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+							d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+						</svg>
+					</a>
+					</div>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
+ <section id="contact" class="section-config">
+    <div class="contain-section">
+      <h2 class="section-heading" data-outline="Contact">Contact</h2>
+	</div>
 </section>
