--- a/public/assets/scss/fonts.scss
+++ b/public/assets/scss/fonts.scss
@@ -1,3 +1,4 @@
 @import url( 'https://fonts.googleapis.com/css?family=Open+Sans:300,700' );
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;900&family=Roboto+Mono:wght@300;500&family=Poppins:wght@600&display=swap');
