--- a/public/assets/scss/section.scss
+++ b/public/assets/scss/section.scss
@@ -2,7 +2,301 @@
 #{$desktop},
 #{$tablet},
 #{$phone} {
+
+	/* variables */
+	:root {
+		--primary-color: #5924ed;
+		--secondary-black: #0d081a;
+		--secondary-gray: #48464b;
+		--body-bg: #efebfa;
+	}
+	.section-config {
+		padding: 5rem 0;
+	}
+	.contain-section {
+		width: 90%;
+		margin: 0 auto;
+		max-width: 1000px;
+	}
+	.buttons {
+		margin-top: 3rem;
+		display: flex;
+		align-items: center;
+		justify-content: flex-start;
+		gap: 2rem;
+
+		a{
+			text-decoration: none;
+		}
+		.primary-btn {
+			display: inline-block;
+			background-color: var(--primary-color);
+			color: white;
+			font-size: 1.2rem;
+			padding: 0.6em 1.6em;
+			border-radius: 50px;
+		}
+		.primary-btn.outline {
+			background-color: transparent;
+			border: 2px solid var(--primary-color);
+			color: var(--primary-color);
+		}
+		svg {
+			width: 50px;
+			color: var(--primary-color);
+		}
+	}
+
 	section {
 		
+	// Service
+		.section-heading {
+			font-size: clamp(2rem, 10vw, 8rem);
+			text-transform: uppercase;
+			font-family: 'Montserrat';
+			letter-spacing: 0.2rem;
+			text-align: center;
+			position: relative;
+			margin-bottom: 4rem;
+		}
+	
+		.section-heading::before {
+			content: attr(data-outline);
+			position: absolute;
+			left: 2%;
+			top: -20%;
+			width: 100%;
+		
+			text-align: center;
+			text-transform: uppercase;
+			font-family: 'Montserrat';
+			letter-spacing: 0.2rem;
+		
+			color: transparent;
+			/* -webkit-text-stroke: 1.5px rgba(0, 0, 0, 0.103); */
+			-webkit-text-stroke: 1.5px #5a24ed2f;
+			z-index: -1;
+		}
+		
+		.all-items {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+		}
+
+		.item {
+			padding: 1.5rem;
+			transition: 0.3s ease-in-out background-color;
+			border-radius: 12px;
+
+			&:nth-child(1):hover {
+				background-color: rgb(8 69 241 / 35%);
+			}
+
+			&:nth-child(2):hover {
+				background-color: rgba(0, 255, 115, 0.151);
+			}
+
+			&:nth-child(3):hover {
+				background-color: #cbbef093;
+			}
+
+			.icon {
+				width: 50px;
+				height: 50px;
+				padding: 0.8rem;
+				background-color: rgba(255, 0, 0, 0.24);
+				border-radius: 50%;
+				margin-bottom: 1rem;
+			}
+
+			&:nth-child(1) .icon {
+				background-color: rgb(7 106 255 / 37%);
+			}
+			&:nth-child(2) .icon {
+				background-color: rgba(0, 255, 115, 0.493);
+			}
+			&:nth-child(3) .icon {
+				background-color: #4705fc80;
+			}
+
+		}
+
+		.item-heading {
+			font-weight: 500;
+			font-size: 2rem;
+			/* text-transform: uppercase; */
+			margin-bottom: 1.5rem;
+			font-family: 'Poppins';
+		}
+
+		.item-desc {
+			font-family: 'Montserrat', sans-serif;
+			color: var(--secondary-gray);
+		}
+
+		// About
+		.wrapper {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			gap: 30px;
+
+			.left {
+				padding: 2rem;
+				text-align: center;
+
+				.card {
+					box-shadow: 0px 0px 20px #4705fc33;
+					padding: 3rem;
+					border-radius: 12px;
+					min-height: 400px;
+
+					.card-desc {
+						color: var(--secondary-gray);
+						margin-bottom: 2rem;
+					}
+
+					.card-name {
+						font-size: 2rem;
+						margin-bottom: 0.2rem;
+					}
+
+					.card-sub-title {
+						font-size: 1.4rem;
+					}
+
+					.img {
+						width: 170px;
+						height: 160px;
+						margin: 0 auto;
+						border-radius: 50%;
+						overflow: hidden;
+						margin-bottom: 2rem;
+
+						img {
+							width: 100%;
+						}
+					}
+				}
+			}
+
+			.right {	
+				.subheading {
+					color: var(--primary-color);
+					margin-bottom: 1rem;
+				}
+				.slogan {
+					font-size: 2.5rem;
+					margin-bottom: 2rem;
+				}
+				.right-text {
+					color: var(--secondary-gray);
+				}
+			}
+		}
+
+		//Projects
+		#projects{
+
+			.item {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				max-width: 800px;
+				margin: 0 auto;
+				margin-bottom: 15rem;
+				/* gap: 2rem; */
+
+				&:nth-of-type(even) {
+					flex-direction: row-reverse;
+				}
+
+				.left {
+					flex: 1;
+					
+					.img {
+						height: 500px;
+						overflow: hidden;
+						border-radius: 12px;
+						overflow: hidden;
+						box-shadow: 0px 0px 20px #4705fc33;
+						position: relative;
+
+						&::after {
+							content: '';
+							position: absolute;
+							left: 0;
+							top: 0;
+							height: 100%;
+							width: 100%;
+							background-color: #5a24ed38;
+						}
+
+						img {
+							object-fit: cover;
+							transition: 0.3s ease transform;
+						}
+					}
+				}
+
+				.right {
+					margin-left: -150px;
+					flex: 1;
+					background-color: var(--body-bg);
+					padding: 5rem 3rem;
+					border-radius: 12px;
+					box-shadow: 0px 0px 20px #00000028;
+					z-index: 2;
+				}
+
+				&:nth-of-type(even) .right {
+					margin-left: 0;
+				}
+
+				&:nth-of-type(even) .left {
+					margin-left: -150px;
+				}
+			}
+		} 
+	}
+
+}
+
+@media #{$tablet},
+#{$phone} {
+
+	// Service
+	#services .all-items {
+		flex-direction: column;
+		text-align: center;
+	}
+	#services .item .icon {
+		margin: 0 auto;
+		margin-bottom: 1rem;
+	}
+	#services .item {
+		margin: 2rem 0;
+	}
+	#services .item:nth-child(1) {
+		background-color: rgb(8 69 241 / 35%);
+	}
+	#services .item:nth-child(2) {
+		background-color: rgba(0, 255, 115, 0.151);
+	}
+	#services .item:nth-child(3) {
+		background-color: #cbbef093;
+	}
+
+	#about .wrapper {
+		flex-direction: column-reverse;
+		text-align: center;
+	}
+	#about .right .buttons {
+		flex-direction: column;
+	}
+	#about .right .buttons a {
+		width: 100%;
+		text-align: center;
 	}
 }
