--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -93,7 +93,7 @@
 			<div class="item">
 				<div class="left">
 					<div class="img">
-					<img src="/assets/img/project-1.jpg" alt="">
+						<img src="/assets/img/project-1.jpg" alt="project">
 					</div>
 				</div>
 				<div class="right">
@@ -104,13 +104,63 @@
 					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
 					Architecto, fugit.</p>
 					<div class="buttons">
-					<a href="#" class="primary-btn">Know More</a>
-					<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
-						<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-							d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
-						</svg>
-					</a>
+						<a href="#" class="primary-btn">Know More</a>
+						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+							</svg>
+						</a>
+					</div>
+
+				</div>
+			</div>
+			<div class="item">
+				<div class="left">
+					<div class="img">
+						<img src="/assets/img/project-1.jpg" alt="project">
+					</div>
+				</div>
+				<div class="right">
+					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
+					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
+					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
+					quibusdam dolor fuga quis
+					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
+					Architecto, fugit.</p>
+					<div class="buttons">
+						<a href="#" class="primary-btn">Know More</a>
+						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+							</svg>
+						</a>
+					</div>
+
+				</div>
+			</div>
+			<div class="item">
+				<div class="left">
+					<div class="img">
+						<img src="/assets/img/project-1.jpg" alt="project">
+					</div>
+				</div>
+				<div class="right">
+					<h2 class="project-title">Lorem ipsum dolor sit.</h2>
+					<h3 class="project-sub-title">Lorem ipsum dolor sit amet.</h3>
+					<p class="project-desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum, accusantium
+					quibusdam dolor fuga quis
+					quidem soluta sed maxime dolorem fugit esse corporis animi rerum excepturi doloribus. Voluptatum, illum!
+					Architecto, fugit.</p>
+					<div class="buttons">
+						<a href="#" class="primary-btn">Know More</a>
+						<a href="#" class="primary-btn outline external-link"> <span>Preview</span>
+							<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+							<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+								d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14" />
+							</svg>
+						</a>
 					</div>
 
 				</div>
@@ -122,5 +172,7 @@
  <section id="contact" class="section-config">
     <div class="contain-section">
       <h2 class="section-heading" data-outline="Contact">Contact</h2>
+	  	<!-- Formulario -->
+		<div id="root"></div>
 	</div>
 </section>
