feat:finish footer

--- a/views/share/footer.hbs
+++ b/views/share/footer.hbs
@@ -1,5 +1,48 @@
-<footer>
-	<div class="text-center">
-		<p>@Erick Alva {{ getAnio }}</p>
+<footer id="footer">
+	<div class="contain-section">
+		<footer>
+			<div class="con-1">
+				<div class="logo">
+					<a href="#">
+						<img src="/assets/img/light-logo.svg" alt="logo">
+					</a>
+				</div>
+				<p>
+					Lorem ipsum dolor sit, amet consectetur adipisicing elit. Necessitatibus sit, voluptates veritatis porro eveniet nulla nostrum, quibusdam laboriosam quod rem ratione dolorem cupiditate nisi molestias modi.
+				</p>
+			</div>
+			<div class="con-2">
+				<h2 class="column-heading">Important <br />Links</h2>
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Tecnology</a></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Projects</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+			<div class="con-3">
+				<h2 class="column-heading">Contact <br />Links</h2>
+				<ul>
+					<li><a href="mailto:erickcontacto@gmail.com">erickcontacto@gmail.com</a></li>
+					<li><a href="#">55 5197 7836</a></li>
+					<li><a href="#">Cuautitlan México</a></li>
+				</ul>
+			</div>
+			<div class="con-4">
+				<h2 class="column-heading">Social <br />Links</h2>
+				<ul>
+					<li><a href="#">FB</a></li>
+					<li><a href="#">TW</a></li>
+					<li><a href="#">LI</a></li>
+					<li><a href="#">GH</a></li>
+				</ul>
+			</div>
+		</footer>
 	</div>
 </footer>
+<section id="copyright">
+	<div class="contain-section">
+		<p>@ Erick Alva {{ getAnio }}</p>
+	</div>
+</section>
