--- a/public/assets/scss/footer.scss
+++ b/public/assets/scss/footer.scss
@@ -2,12 +2,127 @@
 #{$desktop},
 #{$tablet},
 #{$phone} {
-	body > footer {
-		
-	width: 100%;
-	position: fixed;
-	bottom: 0;
+	:root {
+		--primary-color: #5924ed;
+		--secondary-black: #0d081a;
+		--secondary-gray: #48464b;
+		--body-bg: #efebfa;
+	}
 
-	
+	#footer{
+		background-color: #311580;
+		color: white;
+		padding: 10rem 0 5rem 0;
+		footer {
+			display: flex;
+			align-items: flex-start;
+			justify-content: flex-start;
+			gap: 2rem;
+			ul{
+				list-style: none;
+				padding-left: 0px;
+				margin-left: 0px !important;
+				li{
+					border-radius: 4px;
+					a{
+						display: inline-block;
+						width: 100%;
+						color: white;
+						font-size: 1.5rem;
+						padding: .5rem;
+						text-decoration: none;
+					}
+					&:hover{
+						background-color: white;
+					}
+					&:hover a{
+						color: var(--primary-color);
+					}
+				}
+			}
+			.column-heading{
+				font-family: 'Montserrat', sans-serif;
+				font-size: 1.5rem;
+				margin-bottom: 2rem;
+				text-transform: uppercase;
+				line-height: 1.5em;
+			}
+			.con-1{
+				flex: 3;
+				.logo{
+					img{
+						max-width: 100px;
+						margin-bottom: 2rem;
+					}
+					p{
+						color: white;
+
+					}
+				}
+			}
+			.con-2 {
+				flex: 2;
+			}
+			.con-3 {
+				flex: 2;
+			}
+			.con-4{
+				flex: 1;
+				ul{
+					display: flex;
+					flex-wrap: wrap;
+					a{
+						min-width: 50px;
+					}
+				}
+			}
+		}
+	}	
+
+	#copyright{
+		padding: 1rem 0;
+		background-color: #221052;
+		p{
+			color:white;
+			margin: 1rem;
+		}
+	}
+}
+
+@media #{$tablet},
+#{$phone}{
+
+	#footer{
+		footer{
+			flex-direction: column;
+			align-items: center;
+			justify-content: center;
+			text-align: center;
+			.con-1{
+				width: 100%;
+				margin-bottom: 3rem;
+			}
+			.con-2{
+				width: 100%;
+				margin-bottom: 3rem;
+			}
+			.con-3{
+				width: 100%;
+				margin-bottom: 3rem;
+			}
+			.con-4{
+				width: 100%;
+				margin-bottom: 3rem;
+				ul{
+					display: flex;
+					justify-content: center;
+				}
+			}
+		}
+	}
+	#copyright{
+		p{
+			text-align: center;
+		}
 	}
 }
