--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -169,10 +169,89 @@
 	</div>
 </section>
 
+<!-- Formulario -->
+<div id="root"></div>
+
  <section id="contact" class="section-config">
     <div class="contain-section">
       <h2 class="section-heading" data-outline="Contact">Contact</h2>
-	  	<!-- Formulario -->
-		<div id="root"></div>
+		<div class="wrapper">
+			<div class="left">
+				<h2 class="contact-heading">Here/Inquiry</h2>
+				<p class="contact-description">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus saepe reiciendis sint vero reprehenderit excepturi itaque!.
+				</p>
+				<div class="contact-info">
+					<ul>
+						<li>
+							<a href="#">
+								<span class="icon">
+									<i class="fas fa-phone"></i>
+								</span>
+								<span class="text">55 51977836</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="icon">
+									<i class="fas fa-envelope"></i>
+								</span>
+								<span class="text">erickcontacto@gmail.com</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<span class="icon">
+									<i class="fas fa-location-arrow"></i>
+								</span>
+								<span class="text">Cuatitlan, México</span>
+							</a>
+						</li>
+					</ul>
+				</div>
+				<div class="social-info">
+					<ul>
+						<li>
+							<a href="#">GH</a>
+						</li>
+						<li>
+							<a href="#">LI</a>
+						</li>
+						<li>
+							<a href="#">TW</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+			<div class="right">
+				<div class="form-wrapper">
+					<form action="#">
+						<div class="form-group">
+							<label for="name">Your name</label>
+							<div class="input-wrapper">
+								<span class="icon">
+									<i class="fas fa-user"></i>
+								</span>
+								<input type="text" id="name" name="name">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="email">Your Email</label>
+							<div class="input-wrapper">
+								<span class="icon">
+									<i class="fas fa-envelope"></i>
+								</span>
+								<input type="email" id="email" name="email">
+							</div>
+						</div>
+						<div class="form-group">
+							<label for="message">Message</label>
+							<textarea type="text" name="message" id="message" width="100%"></textarea>
+						</div>
+						<button type="submit">Send</button>
+					</form>
+				</div>
+			</div>
+		</div>
 	</div>
 </section>
