--- a/views/share/scripts.hbs
+++ b/views/share/scripts.hbs
@@ -17,6 +17,7 @@
 <script src="/assets/js/react/elements/forms.js" type="text/babel"></script>
 <!-- Components -->
 <script src="/assets/js/react/components/inputComponent.js" type="text/babel"></script>
+<script src="/assets/js/react/components/textAreaComponent.js" type="text/babel"></script>
 <!-- Helpers -->
 <script src="/assets/js/react/helpers/helpers.js" type="text/babel"></script>
 <!-- Core -->
