progress: form with customHook

--- a/views/content/home.hbs
+++ b/views/content/home.hbs
@@ -169,9 +169,6 @@
 	</div>
 </section>
 
-<!-- Formulario -->
-<div id="root"></div>
-
  <section id="contact" class="section-config">
     <div class="contain-section">
       <h2 class="section-heading" data-outline="Contact">Contact</h2>
@@ -224,7 +221,7 @@
 				</div>
 			</div>
 			<div class="right">
-				<div class="form-wrapper">
+				{{!-- <div class="form-wrapper">
 					<form action="#">
 						<div class="form-group">
 							<label for="name">Your name</label>
@@ -250,7 +247,9 @@
 						</div>
 						<button type="submit">Send</button>
 					</form>
-				</div>
+				</div> --}}
+				<!-- Formulario -->
+				<div id="root"></div>
 			</div>
 		</div>
 	</div>
