--- a/views/share/scripts.hbs
+++ b/views/share/scripts.hbs
@@ -13,13 +13,15 @@
 {{!-- <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script> --}}
 <script src="/assets/js/libs/react_libs/babel.min.js"></script>
 
+<!-- Helpers -->
+<script src="/assets/js/react/helpers/helpers.js" type="text/babel"></script>
+<!-- Hooks -->
+<script src="/assets/js/react/hooks/useForm.js" type="text/babel"></script>
 <!-- Components SCSS -->
 <script src="/assets/js/react/elements/forms.js" type="text/babel"></script>
 <!-- Components -->
 <script src="/assets/js/react/components/inputComponent.js" type="text/babel"></script>
 <script src="/assets/js/react/components/textAreaComponent.js" type="text/babel"></script>
-<!-- Helpers -->
-<script src="/assets/js/react/helpers/helpers.js" type="text/babel"></script>
 <!-- Core -->
 <script src="/assets/js/react/app.js" type="text/babel"></script>
 <script src="/assets/js/react/index.js" type="text/babel"></script>
