--- a/public/assets/scss/main.scss
+++ b/public/assets/scss/main.scss
@@ -13,10 +13,10 @@
 	main {
 
 		background-color: var(--primary-color);
-		max-width: 800px;
-		width: 90%;
+		max-width: 500px;
+		// width: 90%;
 		margin: auto;
-		padding: 40px;
+		padding: 25px;
 		font-family: 'Montserrat', sans-serif;
 		border-radius: 18px;
 	}
